--- a/aeroclub/src/css/Alumni.css
+++ b/aeroclub/src/css/Alumni.css
@@ -24,7 +24,7 @@
   width: 100%;
   margin: 0vh 0vw;
 
-  background-image: url("https://unsplash.it/600/600");
+  /* background-image: url("https://unsplash.it/600/600"); */
   background-size: cover;
   padding-bottom: 0px;
 
