--- a/aeroclub/src/css/Event.css
+++ b/aeroclub/src/css/Event.css
@@ -24,7 +24,7 @@
   margin: 0vh 0vw;
   clip-path: polygon(0 0,100% 0,100% 80%,0 100%);
 
-  background-image: url('https://unsplash.it/600/600');
+  background: url("../images/utils/about.jpg") center center no-repeat;
   background-size: cover;
   padding-bottom: 0px;
 
