--- a/aeroclub/src/css/testimonials.css
+++ b/aeroclub/src/css/testimonials.css
@@ -71,7 +71,7 @@
 }
 
 .testimonial {
-    height: 604px;
+    height: 650px;
     position: relative;
     /* padding-top: 50px; */
     /* padding-bottom: 50px; */
@@ -204,17 +204,21 @@
   right: 0;
   bottom: 0;
   width: 70%;
-  margin: auto;
+  margin: 1rem auto;
   padding: 20px;
   position: relative;
   text-align: center;
-  background: linear-gradient(90deg, rgb(155, 57, 57) 0%, rgba(0,0,0,1) 50%, rgba(71, 8, 8) 100%);
+  background: linear-gradient(
+    90deg
+    , rgb(45 45 45) 0%, rgba(0,0,0,1) 50%, rgb(40 40 40) 100%);
     border-radius: 20px;
+    box-shadow: 0px 0px 14px 2px rgba(0,0,0,0.75);
 }
 .testimonial4_slide:after {
     content:'';
     background-color: rgb(32, 32, 32);;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.6); */
+    /* box-shadow: 1px 0px 14px 2px rgba(0,0,0,0.75); */
     background-size: cover;
     position: absolute;
     top:0px;
