--- a/aeroclub/src/css/testimonials.css
+++ b/aeroclub/src/css/testimonials.css
@@ -210,7 +210,7 @@
   text-align: center;
   background: linear-gradient(
     90deg
-    , rgb(45 45 45) 0%, rgba(0,0,0,1) 50%, rgb(40 40 40) 100%);
+    , rgb(45 45 45) 0%, rgb(23, 22 ,22) 50%, rgb(40 40 40) 100%);
     border-radius: 20px;
     box-shadow: 0px 0px 14px 2px rgba(0,0,0,0.75);
 }
