--- a/aeroclub/src/css/Eventhome.css
+++ b/aeroclub/src/css/Eventhome.css
@@ -139,7 +139,8 @@
   width: 100%;
   margin: 0vh 0vw;
 
-  /* background-image: url('https://unsplash.it/600/600'); */
+  background: url("../images/utils/about.jpg") center center no-repeat;
+  background-size: cover;
   background-size: cover;
   padding-bottom: 0px;
 
