--- a/aeroclub/src/css/Alumni.css
+++ b/aeroclub/src/css/Alumni.css
@@ -24,7 +24,7 @@
   width: 100%;
   margin: 0vh 0vw;
 
-  /* background-image: url("https://unsplash.it/600/600"); */
+  background: url("../images/utils/about.jpg") center center no-repeat;
   background-size: cover;
   padding-bottom: 0px;
 
