--- a/aeroclub/src/css/news.css
+++ b/aeroclub/src/css/news.css
@@ -83,3 +83,13 @@
 .hovit:hover{
   box-shadow: 0px -2px 30px rgba(0,0,0,0.3);
 }
+
+
+
+@media screen and (max-width:1000px) 
+{
+  .panel-body h4, h3, h1, h2, h5, h6{
+    font-size: medium !important;
+    text-align: justify !important;
+  }
+}
