--- a/aeroclub/src/css/news.css
+++ b/aeroclub/src/css/news.css
@@ -88,7 +88,7 @@
 
 @media screen and (max-width:1000px) 
 {
-  .panel-body h4, h3, h1, h2, h5, h6{
+  .panel-body {
     font-size: medium !important;
     text-align: justify !important;
   }
