minor ui changes

--- a/aeroclub/src/css/news.css
+++ b/aeroclub/src/css/news.css
@@ -88,7 +88,7 @@
 
 @media screen and (max-width:1000px) 
 {
-  .panel-body {
+  .panel-body, .ql-editor, .ql-align-justify, .ql {
     font-size: medium !important;
     text-align: justify !important;
   }
