--- a/aeroclub/src/css/featured-proj.css
+++ b/aeroclub/src/css/featured-proj.css
@@ -70,7 +70,7 @@
 }
 
 .white-heading:after {
-  background: url(https://i.ibb.co/d7tSD1R/heading-line-white.png);
+  /* background: url(https://i.ibb.co/d7tSD1R/heading-line-white.png); */
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -287,6 +287,18 @@ img {
   padding: 0 1.5rem;
   font-family: revert;
 }
+
+.card_text2 {
+  color: #1d1d1d;
+  text-align: center;
+  font-size: .9rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+  font-weight: 500;
+  padding: 0 1.5rem;
+  font-family: revert;
+}
+
 .made_by {
   font-weight: 400;
   font-size: 13px;
